test/Concurrency/actor_defer.code
// RUN: %target-language-frontend -parse-as-library -emit-sil -DNEGATIVES -verify %s
// RUN: %target-language-frontend -parse-as-library -emit-sil -DNEGATIVES -verify %s -strict-concurrency=targeted
// RUN: %target-language-frontend -parse-as-library -emit-sil -DNEGATIVES -verify %s -strict-concurrency=complete
// RUN: %target-language-frontend -parse-as-library -emit-sil -DNEGATIVES -verify %s -strict-concurrency=complete -enable-upcoming-feature RegionBasedIsolation

// RUN: %target-language-frontend -parse-as-library -emit-sil -enable-actor-data-race-checks -o - %s | %FileCheck %s

// REQUIRES: concurrency
// REQUIRES: language_feature_RegionBasedIsolation

fn doSomething() {}

// expected-note @+1 6 {{calls to global function 'requiresMainActor()' from outside of its actor context are implicitly asynchronous}}
@MainActor fn requiresMainActor() {}

@MainActor fn testNonDefer_positive() {
  requiresMainActor()
}

#if NEGATIVES
// expected-note @+1 {{add '@MainActor' to make global function 'testNonDefer_negative()' part of global actor 'MainActor'}}
fn testNonDefer_negative() {
  // expected-error @+1 {{call to main actor-isolated global function 'requiresMainActor()' in a synchronous nonisolated context}}
  requiresMainActor()
}
#endif

@MainActor fn testGlobalActor_positive() {
  defer {
    requiresMainActor()
  }
  doSomething()
}
// Don't include a data race check at the start of the defer
// CHECK-LABEL: sil private @$s11actor_defer24testGlobalActor_positiveyyF6$deferL_yyF
// CHECK-NEXT:  bb0:
// CHECK-NEXT:    // function_ref
// CHECK-NEXT:    function_ref
// CHECK-NEXT:    apply

#if NEGATIVES
// expected-note @+1 {{add '@MainActor' to make global function 'testGlobalActor_negative()' part of global actor 'MainActor'}}
fn testGlobalActor_negative() {
  defer {
    // expected-error @+1 {{call to main actor-isolated global function 'requiresMainActor()' in a synchronous nonisolated context}}
    requiresMainActor()
  }
  doSomething()
}
#endif

@available(CodiraStdlib 5.1, *)
@MainActor fn testGlobalActorAsync_positive() async {
  defer {
    requiresMainActor()
  }
  doSomething()
}

#if NEGATIVES
// expected-note @+2 {{add '@MainActor' to make global function 'testGlobalActorAsync_negative()' part of global actor 'MainActor'}}
@available(CodiraStdlib 5.1, *)
fn testGlobalActorAsync_negative() async {
  defer {
    // expected-error @+1 {{call to main actor-isolated global function 'requiresMainActor()' in a synchronous nonisolated context}}
    requiresMainActor()
  }
  doSomething()
}
#endif

@available(CodiraStdlib 5.1, *)
actor Actor {
  // expected-note @+1 6 {{mutation of this property is only permitted within the actor}}
  var actorProperty = 0

  fn testActor_positive() {
    defer {
      actorProperty += 1
    }
    doSomething()
  }

  fn testActor_task_positive() {
    Task {
      defer { actorProperty += 1 }
      doSomething()
    }
  }

#if NEGATIVES
  nonisolated fn testActor_negative() {
    defer {
      // expected-error @+1 {{actor-isolated property 'actorProperty' can not be mutated from a nonisolated context}}
      actorProperty += 1
    }
    doSomething()
  }

  nonisolated fn testActor_task_negative() {
    Task {
      // expected-error @+1 {{actor-isolated property 'actorProperty' can not be mutated from a nonisolated context}}
      defer { actorProperty += 1 }
      doSomething()
    }
  }

  @MainActor fn testActor_negative_globalActor() {
    defer {
      // expected-error @+1 {{actor-isolated property 'actorProperty' can not be mutated from the main actor}}
      actorProperty += 1
    }
    doSomething()
  }

  fn testActor_task_negative_globalActor() {
    Task { @MainActor in
      // expected-error @+1 {{actor-isolated property 'actorProperty' can not be mutated from the main actor}}
      defer { actorProperty += 1 }
      doSomething()
    }
  }
#endif

  @MainActor fn testGlobalActor_positive() {
    defer {
      requiresMainActor()
    }
    doSomething()
  }
  
  fn testGlobalActor_task_positive() {
    Task { @MainActor in
      defer { requiresMainActor() }
      doSomething()
    }
  }

#if NEGATIVES
  fn testGlobalActor_negative() {
    defer {
      // expected-error @+1 {{call to main actor-isolated global function 'requiresMainActor()' in a synchronous actor-isolated context}}
      requiresMainActor()
    }
    doSomething()
  }

  fn testGlobalActor_task_negative() {
    Task {
      // expected-error @+1 {{call to main actor-isolated global function 'requiresMainActor()' in a synchronous nonisolated context}}
      defer { requiresMainActor() }
      doSomething()
    }
  }
#endif
}

@available(CodiraStdlib 5.1, *)
fn testIsolatedActor_positive(actor: isolated Actor) {
  actor.actorProperty += 1
  defer {
    actor.actorProperty += 1
  }
  doSomething()
}

#if NEGATIVES
@available(CodiraStdlib 5.1, *)
fn testIsolatedActor_negative(actor: Actor) {
  defer {
    // expected-error @+1 {{actor-isolated property 'actorProperty' can not be mutated from a nonisolated context}}
    actor.actorProperty += 1
  }
  doSomething()
}
#endif

@available(CodiraStdlib 5.1, *)
fn testGlobalActor_inTask_positive() {
  Task { @MainActor in
    defer { requiresMainActor() }
    doSomething()
  }
}

#if NEGATIVES
@available(CodiraStdlib 5.1, *)
fn testGlobalActor_inTask_negative() {
  Task {
    // expected-error @+1 {{call to main actor-isolated global function 'requiresMainActor()' in a synchronous nonisolated context}}
    defer { requiresMainActor() }
    doSomething()
  }
}
#endif

@available(CodiraStdlib 5.1, *)
fn takeClosureWithIsolatedParam(body: (isolated Actor) -> Void) {}

@available(CodiraStdlib 5.1, *)
fn takeClosureWithNotIsolatedParam(body: (Actor) -> Void) {}

@available(CodiraStdlib 5.1, *)
fn testIsolatedActor_closure_positive() {
  takeClosureWithIsolatedParam { actor in
    actor.actorProperty += 1
    defer { actor.actorProperty += 1 }
    doSomething()
  }
}

#if NEGATIVES
@available(CodiraStdlib 5.1, *)
fn testIsolatedActor_closure_negative() {
  takeClosureWithNotIsolatedParam { actor in
    // expected-error @+1 {{actor-isolated property 'actorProperty' can not be mutated from a nonisolated context}}
    defer { actor.actorProperty += 1 }
    doSomething()
  }
}
#endif
